set up commit for heroku2

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -18,7 +18,7 @@
     <div class="main">
     {{>header}}
     <div class=other>
-    <img class ="potrait" src="/img/DSC_2004.JPEG">
+    <img class ="potrait" src="/img/me.png">
     <p>All rights reserved</p>
     </div>
     </div>
